fix: fix alignment issue for titles & performance issues on production

--- a/holy-grail-frontend/src/features/Upload/UploadPage.css
+++ b/holy-grail-frontend/src/features/Upload/UploadPage.css
@@ -24,6 +24,7 @@
 .upload-page-subtitle {
     font-size: 1rem;
     margin-bottom: 24px;
+    text-align: center;
 }
 
 .upload-notes-submit-button {
